@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/13/18 by NullCGT */
+/* Edited on 4/20/18 by NullCGT */
 
 #include "hack.h"
 
@@ -1624,6 +1624,15 @@ register struct attack *mattk;
             }
         }
         break;
+    case AD_WIND:
+        if (negated) {
+            tmp = 0;
+            break;
+        }
+        pline("%s is blasted by wind!", Monnam(mdef));
+        mhurtle(mdef, mdef->mx - u.ux, mdef->my - u.uy, tmp);
+        tmp = 0;
+        break;
     case AD_FIRE:
         if (negated) {
             tmp = 0;
@@ -2023,6 +2032,11 @@ register struct attack *mattk;
             pline("%s is affected by your flash of light!", Monnam(mdef));
             mdef->mconf = 1;
         }
+        break;
+    case AD_WIND:
+        pline("%s is blasted by wind!", Monnam(mdef));
+        mhurtle(mdef, mdef->mx - u.ux, mdef->my - u.uy, tmp);
+        tmp = 0;
         break;
     case AD_COLD:
         resistance = resists_cold(mdef);
