@@ -294,6 +294,8 @@ New Monsters
 - Martial Artist
 - Martial Master
 - Mystic Scarab
+- Goblin Windmage
+- Whirling Sphere
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Drake (Dragonmaster Quest)
